# cuda_benchmark

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  README.md  cuda_benchmark.h  example.cu  main.cu
examples/: instructions.cu  warp_latency.cu
include/: cuda_benchmark.h
scripts/: plot_sm_heatmap.py  plot_warp_latency.py  plot_warp_latency_displot.py  report_loader.py
src/: cuda_benchmark.cu
